--- a/Temperature/templates/base.html
+++ b/Temperature/templates/base.html
@@ -18,7 +18,7 @@
 		<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 		
-			<a class="navbar-brand" href="{% url 'Temperature:index' %}" >Temperature</a>
+			<a class="navbar-brand" href="{% url 'Temperature:index' %}" >Home Page</a>
 			<div class="collapse navbar-collapse" id="topNavBar">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="">
