--- a/Temperature/templates/Temperature/tempdata_form.html
+++ b/Temperature/templates/Temperature/tempdata_form.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} Record A New Temp {% endblock %}
+{% block albums_active %}active{% endblock %}
 
 {% block body %}
 <div class="container-fluid">
