--- a/Temperature/templates/tempdata_form.html
+++ b/Temperature/templates/tempdata_form.html
@@ -1,30 +1,35 @@
-{% extends 'base.html' %}
-{% block title %} Record A New Temp {% endblock %}
-
-{% block body %}
 <div class="container-fluid">
 	<div class="row">
+
 		<div class="col-sm-12 col-md-7">
+
 			<div class="panel panel-default">
+
 				<div class="panel-body">
-				<h3>Add New Album</h3>
+
 				{% if error_message %}
 					<p><strong>{{ error_message }}</strong></p>
 				{% endif %}	
+				<h1>Welcome To The Temperature Recordings Page</h1>
 				<form class="form-horizontal" action="" method="post" enctype="multipart/form-data">
 					{% csrf_token %}
 					{% include 'form-template.html' %}
 					<div class="form-group">
+
 						<div class="col-sm-offset-2 col-sm-10">
 							<button type="submit" class="btn btn-primary">Submit</button>
 						</div>
+
 					</div>
+
 				</form>
 
 				</div>
+
 			</div>
+
 		</div>
+
 	</div>
 	
 </div>
-{% endblock %}
