--- a/Temperature/templates/base.html
+++ b/Temperature/templates/base.html
@@ -5,13 +5,13 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% load staticfiles %}
-		<!--<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet" type="text/css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
-		<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.css' %}">
-  		<script src="{% static 'bootstrap-3.3.7-dist/jquery/jquery-1.11.3.js' %}"></script>
-  		<script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.js' %}"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="{% static 'fusioncharts.js' %}"></script>
+		<script type="text/javascript" src="{% static 'fusioncharts.theme.fint.js' %}"></script>
+
 		<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 	</head>
 	<body>
@@ -28,7 +28,7 @@
 					</li>
 					<<li>
 						<a href="#">
-							<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;Logout
+							<span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;Login
 						</a>
 					</li>
 				</ul>
